# Ares

./: Ares.cpp  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Ares/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Ares/Category/: CMakeLists.txt  Category.cpp  Category.h
Client/Ares/Category/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Ares/Category/Module/Modules/: CMakeLists.txt
Client/Ares/Category/Module/Modules/Combat/: CMakeLists.txt  (+4 more)
Client/Ares/Hook/: CMakeLists.txt  Hook.cpp  Hook.h
Client/Ares/Hook/Hooks/: CMakeLists.txt
Client/Ares/Hook/Hooks/EntityTick/: CMakeLists.txt  EntityLevelTick.cpp  EntityLevelTick.h
Client/Ares/Hook/Hooks/GameMode/: CMakeLists.txt  GameMode.cpp  GameMode.h
Client/Ares/Hook/Hooks/Key/: CMakeLists.txt  Key.cpp  Key.h
Client/Ares/Hook/Hooks/Mouse/: CMakeLists.txt  Mouse.cpp  Mouse.h
Client/Ares/Hook/Hooks/Network/: CMakeLists.txt  Network.cpp  Network.h
Client/Ares/Hook/Hooks/RenderContext/: CMakeLists.txt  RenderContextTick.cpp  RenderContextTick.h
Client/Ares/Hook/Hooks/SwapChain/: CMakeLists.txt  SwapChain.cpp  SwapChain.h
Client/Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Client/SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Client/SDK/Classes/: Actor.cpp  Actor.h  CMakeLists.txt  ClientInstance.cpp  ClientInstance.h  GameMode.h  Level.cpp  Level.h  LoopbackPacketSender.h  MovementProxy.cpp  MovementProxy.h  Packet.cpp  Packet.h  Player.cpp  Player.h
Client/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
Includes/: CMakeLists.txt
Includes/imgui/: CMakeLists.txt
(+14 files in other folders)
